# PyVerse

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Fraud_Detection_Machine_Learning_Project.ipynb  LICENSE  PROJECT-README-TEMPLATE.md  PROJECT_STRUCTURE.md  Project-Structure.md  README.md  Repo-structure.md  SECURITY.md  butterfly_classification.ipynb  chessboard.py  config.json  game.py  main.py  pieces.py  player.py  predicting-salary-using-sk-learn-linear-regression.ipynb  repo_structure.txt  typing_speed_test.py
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.yml  readme_template.md
AI_Sudoku/: .gitignore  BoardExtractor.py  CNN.py  KNN.py  MainUI.py  README.md  RecognizeAndConstructBoard.py  Recognizer.py  Run.py  SudokuSolver.py  requirements.txt
Analysis of Mortality Rate/: README.md
Ball-Tracking/: project.ipynb
Beginner_Projects/: 2048.py  Contact_Manager  Egg_Catcher_Game.py  SnakeGame.py  Tasker.py  contents_lab.json  labbot.ipynb  pomodoro_timer.py
Blockchain_Development/: smart_contracts.py
Computer Vision/: drowsiness.py
Customer Segmentation Tool/: README.md
Cybersecurity_Tools/PyRecon/: PROJECT_SUMMARY.md  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_installation.py
Cybersecurity_Tools/PyRecon/examples/: targets.txt
Cybersecurity_Tools/PyRecon/pyrecon/: __init__.py
Cybersecurity_Tools/PyRecon/pyrecon/cli/: __init__.py  main.py
Cybersecurity_Tools/PyRecon/pyrecon/core/: __init__.py  banner_grabber.py  os_fingerprint.py  scanner.py  utils.py
Cybersecurity_Tools/PyRecon/pyrecon/output/: __init__.py  formatter.py
Cybersecurity_Tools/PyRecon/pyrecon/plugins/: __init__.py  http_fingerprint.py  tls_parser.py
Cybersecurity_Tools/PyRecon/tests/: __init__.py  test_scanner.py
Data Analysis/: Readme.md
DataVizLearnig/: Readme.md
Data_Science/: Data-science.md  Data_Analysis.md  stock-price-eda.ipynb
EmotionClassification/: Readme.md  Testemotion.py  Testemotion_1.py  Training.py  emotion-detection-readme.md  emotion_model1.json  model.json
Game_Development/: KBC
Image processing/: README.md  data.csv  extra.py  gui_data.py  gui_main_win.py  pdf_data.py  vedio_to_pdf.py
Machine_Learning/: Face Detection  Machine_Learning.md  Readme.md  project.py  requirements.txt  stroke_prediction.ipynb  utils.py
NaviBot-Voice-Assistant/: README.md
Nutritive Analysis/: Nutrition_Project.ipynb  (+1 more)
(+3018 files in other folders)
